TAG: qcreports_db-6-0-25-9
TAG: qcreports_db-6-0-25-8
DATE: 03/18/2025
STAFF: lec
wts2-1628/e4g-189/remove various recombinase QC reports
wts2-1627/e4g-190/modify Alleles report 22-Review for AP:NewAlleleNomenclature tag
        deleted:    mgd/RECOMB_ChildExpNotParent.py
        deleted:    mgd/RECOMB_ExpPresNotPres.py
        deleted:    mgd/RECOMB_GenotypeHemi.sql
        deleted:    mgd/RECOMB_NotInCache.sql
        deleted:    mgd/RECOMB_SameStructure.py
        deleted:    mgd/RECOMB_SpecNoAge.sql
        deleted:    mgd/RECOMB_SpecTheiler.sql
        deleted:    mgd/RECOMB_SpecTheilerAge.py
        deleted:    monthly/RECOMB_Reporter.sql
        deleted:    monthly/RECOMB_ReporterCheck.py
	modified:   qcgxd_reports.csh
        modified:   qcr.shtml
        modified:   weekly/GXD_Images.py
        modified:   weekly/GXD_LackingImages.py

TAG: qcreports_db-6-0-25-7
DATE: 03/14/2025
STAFF: lec
wts2-1624/e4g-186/add (last) Modified By to some GXD QCs
        modified:   mgd/GXD_ChildExpNotParent.py
        modified:   mgd/GXD_ExpPresNotPres.py
        modified:   mgd/GXD_ImageUnused.sql
        modified:   mgd/GXD_ProbeAntibody.sql
        modified:   mgd/GXD_SameStructure.py
        modified:   mgd/GXD_SpecNoAge.sql
        modified:   mgd/GXD_SpecTheiler.sql
        modified:   mgd/GXD_SpecTheilerAge.py
        modified:   monthly/GXD_KnockInGene.sql
        modified:   weekly/GXD_GenotypeNA.sql

TAG: qcreports_db-6-0-25-6
DATE: 03/05/2025
STAFF: lec
wts2-1621/e4g-181/catching gel row errors that cause the front end load to fail
        new file:   weekly/GXD_GelRowsWithNoBand.sql

TAG: qcreports_db-6-0-25-4
DATE: 02/28/2025
STAFF: lec
wts2-1617/e4g-163/Remove 3 QC reports no longer being used
        modified:   qcr.shtml
        deleted:    weekly/TAL_check_superscript.py
        deleted:    weekly/TAL_dupe_allele.py
        deleted:    weekly/TAL_multiple_project_ids.py

TAG: qcreports_db-6-0-25-3
TAG: qcreports_db-6-0-25-2
TAG: qcreports_db-6-0-25-1