@@ -82,6 +82,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_NonMouseNotInEG.rpt">Non-Mouse Expressed Component/Driver Component whose Marker does not exist in EntrezGene</A> <B>(smb)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_NoDriver.rpt">Allele Missing Driver Relationship</A> <B>(smb)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_PM2GeneNoMP.rpt">Papers not in public MGI for genes with no MP annotations</A> <B>(csmith)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_PM2GeneNoMP2.rpt">Papers in public MGI for genes with no MP annotations</A> <B>(csmith)</B>
 </OL>
 
 <A NAME="variants"><B>Allele Variants (laurens)</B> </A>
